<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_gradient"
    >
    
    <LinearLayout 
    	android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
	    android:padding="10dp"
        >
    
	    <TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:text="@string/helpTitle"
		    android:textColor="#ffffffff"
		    android:textSize="18sp"
	        android:shadowColor="#ff000000"
	        android:shadowDx="1"
	        android:shadowDy="1"
	        android:shadowRadius="1" 			    
		    android:paddingBottom="20dp"
		    />
	    
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/helpText"
		    android:textColor="#ffffffff"
		    android:textSize="14sp"
		    />
		
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/aboutTitle"
		    android:textColor="#ff99d6eb"
		    android:textSize="14sp"
		    />
		
		<TextView
		    android:id="@+id/aboutVersion"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textColor="#ffffffff"
		    android:textSize="14sp"
		    />	
		    
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/aboutDetail"
		    android:textColor="#ffffffff"
		    android:textSize="14sp"
		    android:paddingBottom="20dp"
		    />	
		    
		<Button
		    android:id="@+id/prefsButton"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/prefsTitle"
		    />
	 
    </LinearLayout>   

</ScrollView>