<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/mainTitle"
        android:textSize="40sp"
        android:textColor="#ff99d6eb"
        android:textStyle="bold"
        android:shadowColor="#ff000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:paddingBottom="10dp"
        />
    
    <TextView
        android:id="@+id/mainResumeGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/mainResumeGame"
        android:textSize="30sp"
        android:shadowColor="#ff000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"        
        android:paddingBottom="10dp"
        />
    
    <TextView
        android:id="@+id/mainNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/mainNewGame"
        android:textSize="30sp"
        android:shadowColor="#ff000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"        
        android:paddingBottom="10dp"
        />
    
    <TextView
        android:id="@+id/mainScores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/mainScores"
        android:textSize="30sp"
        android:shadowColor="#ff000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"        
        android:paddingBottom="10dp"
        />
    
    <TextView
        android:id="@+id/mainHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/mainHelp"
        android:shadowColor="#ff000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"        
        android:textSize="30sp"
        />
    
</LinearLayout>
